--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "helioslauncher",
-  "version": "1.7.0",
-  "productName": "Helios Launcher",
-  "description": "Modded Minecraft Launcher",
-  "author": "Daniel Scalzi (https://github.com/dscalzi/)",
+  "name": "ezyhordylauncher",
+  "version": "1.1.0",
+  "productName": "EzyhordyLauncher",
+  "description": "Launcher de la Ezyhorde",
+  "author": "Logan Echolls (https://github.com/loganecholls/)",
   "license": "UNLICENSED",
-  "homepage": "https://github.com/dscalzi/HeliosLauncher",
+  "homepage": "https://github.com/loganecholls/ezyhordylauncher",
   "bugs": {
-    "url": "https://github.com/dscalzi/HeliosLauncher/issues"
+    "url": "https://github.com/loganecholls/ezyhordylauncher/issues"
   },
   "private": true,
   "main": "index.js",
@@ -25,11 +25,11 @@
     "node": "12.x.x"
   },
   "dependencies": {
-    "adm-zip": "^0.4.16",
+    "adm-zip": "^0.4.14",
     "async": "^3.2.0",
     "discord-rpc": "^3.1.1",
     "ejs": "^3.1.3",
-    "ejs-electron": "^2.1.0",
+    "ejs-electron": "^2.0.3",
     "electron-updater": "^4.3.1",
     "fs-extra": "^9.0.1",
     "github-syntax-dark": "^0.5.0",
@@ -41,12 +41,12 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
-    "electron": "^9.1.0",
+    "electron": "^9.0.3",
     "electron-builder": "^22.7.0",
-    "eslint": "^7.4.0"
+    "eslint": "^7.2.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dscalzi/HeliosLauncher.git"
+    "url": "git+https://github.com/LoganEcholls/ezyhordylauncher.git"
   }
 }
